Link to style.js stuff in the index

--- a/src/index.pug
+++ b/src/index.pug
@@ -110,3 +110,4 @@ html(lang="en")
         script(src="js/jquery/jquery.min.js")
         script(src="js/popper/popper.min.js")
         script(src="js/bootstrap/bootstrap.min.js")
+        script(src="js/style.js")
