updated pug files - headers & footers

--- a/src/index.pug
+++ b/src/index.pug
@@ -4,8 +4,8 @@ html(lang="en")
         title Page title
         meta(charset="utf-8")
         meta(name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no")
-        meta(name="description" content="")
-        meta(name="author" content="")
+        meta(name="description" content="Girl vs Bull: A podcast experience like no other")
+        meta(name="author" content="Janelle Poiselle & Cat Allen")
         link(rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:400&amp;subset=latin")
         link(rel="stylesheet" href="css/bootstrap/bootstrap-theme.css")
         link(rel="icon" href="favicon.ico")
@@ -14,20 +14,19 @@ html(lang="en")
 
 
             nav.navbar.navbar-expand-lg.navbar-light
-                a.navbar-brand(href="#") Girl vs Bull
+                a.navbar-brand(href="index.html") Girl vs Bull
                 button.navbar-toggler(type="button", data-toggle="collapse", data-target="#navigations-08", aria-controls="navigations-08", aria-expanded="false", aria-label="Toggle navigation")
                     span.navbar-toggler-icon
                 .collapse.navbar-collapse#navigations-08
                     ul.navbar-nav.ml-auto
                         li.nav-item
-                            a.nav-link.active(href="#") About
-                                span.sr-only (current)
+                            a.nav-link(href="about.html") About
                         li.nav-item
-                            a.nav-link(href="#") Episodes
+                            a.nav-link(href="episodes.html") Episodes
                         li.nav-item
-                            a.nav-link(href="#") Exclusives
+                            a.nav-link(href="exclusives.html") Exclusives
                         li.nav-item
-                            a.nav-link(href="#") Collaborate
+                            a.nav-link(href="contact.html") Collaborate
                     a.btn.btn-outline-primary.mt-2.mt-md-0.ml-lg-3(href="#") Listen Now
 
             section.py-5
