--- a/src/exclusives.pug
+++ b/src/exclusives.pug
@@ -4,8 +4,8 @@ html(lang="en")
         title Page title
         meta(charset="utf-8")
         meta(name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no")
-        meta(name="description" content="")
-        meta(name="author" content="")
+        meta(name="description" content="Girl vs Bull: A podcast experience like no other")
+        meta(name="author" content="Janelle Poiselle & Cat Allen")
         link(rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:400&amp;subset=latin")
         link(rel="stylesheet" href="css/bootstrap/bootstrap-theme.css")
         link(rel="icon" href="favicon.ico")
@@ -14,20 +14,20 @@ html(lang="en")
 
 
             nav.navbar.navbar-expand-lg.navbar-light
-                a.navbar-brand(href="#") Girl vs Bull
+                a.navbar-brand(href="index.html") Girl vs Bull
                 button.navbar-toggler(type="button", data-toggle="collapse", data-target="#navigations-08", aria-controls="navigations-08", aria-expanded="false", aria-label="Toggle navigation")
                     span.navbar-toggler-icon
                 .collapse.navbar-collapse#navigations-08
                     ul.navbar-nav.ml-auto
                         li.nav-item
-                            a.nav-link.active(href="#") About
+                            a.nav-link(href="about.html") About
+                        li.nav-item
+                            a.nav-link(href="episodes.html") Episodes
+                        li.nav-item
+                            a.nav-link.active(href="exclusives.html") Exclusives
                                 span.sr-only (current)
                         li.nav-item
-                            a.nav-link(href="#") Episodes
-                        li.nav-item
-                            a.nav-link(href="#") Exclusives
-                        li.nav-item
-                            a.nav-link(href="#") Collaborate
+                            a.nav-link(href="contact.html") Collaborate
                     a.btn.btn-outline-primary.mt-2.mt-md-0.ml-lg-3(href="#") Listen Now
 
             section.py-5
@@ -81,6 +81,39 @@ html(lang="en")
                     h3.mb-4 Don't Miss Out
                     p.lead Remember, we save our best content for exclusive subscribers only. What are you waiting for?
                     a.btn.btn-primary.mt-2(href="#") Give Me Exclusive Access
+
+            footer.py-3
+                .container
+                    .row.d-flex.justify-content-between.flex-column.flex-lg-row.align-items-center
+                        ul.nav.justify-content-center.my-3.my-lg-0
+                            li.nav-item
+                                a.nav-link(href="index.html") Home
+                            li.nav-item
+                                a.nav-link(href="about.html") About
+                            li.nav-item
+                                a.nav-link(href="episodes.html") Episodes
+                            li.nav-item
+                                a.nav-link(href="exclusives.html") Exclusives
+                            li.nav-item
+                                a.nav-link(href="contact.html") Collaborate
+
+                        .d-flex.flex-wrap.align-items-center.justify-content-center.justify-content-lg-start
+                            a(href="#").btn.btn-primary.d-flex.m-2.m-sm-0.mr-sm-3
+                                img.mr-2(src="placeholder/icons/apple.svg", alt="")
+                                .d-flex.flex-column.text-white
+                                    small.m-0 Download on the
+                                    span.m-0.font-weight-bold Apple Store
+                            a(href="#").btn.btn-primary.d-flex.m-2.m-sm-0
+                                img.mr-2(src="placeholder/icons/google.svg", alt="")
+                                .d-flex.flex-column.text-white
+                                    small.m-0 Get it on
+                                    span.m-0.font-weight-bold Google Play
+
+                        .w-100.border-top.my-3
+
+                    .d-flex.flex-column.flex-sm-row.align-items-center.justify-content-sm-between
+                        p.mb-0.small.text-muted © 2020 Girl vs Bull. All right reserved.
+                        a(href="#") Terms and conditions
 
         script(src="js/jquery/jquery.min.js")
         script(src="js/popper/popper.min.js")
