--- a/src/contact.pug
+++ b/src/contact.pug
@@ -35,7 +35,7 @@ html(lang="en")
                     a(href="#")
                         img(src="https://bootstrapshuffle.com/placeholder/pictures/bg_square.svg?primary=e83e8c", height="100", alt="")
                     h2.my-4 Let's Collaborate
-                    p Lorem ipsum dolor sit amet, consectetur adipiscing elit. gravida augue, a eleifend dolor. Sed sagittis ut odio vitae porta. Mauris et sapien lacinia, ornare nulla sit amet, tincidunt turpis. Integer fringilla sem a odio condimentum, vel ullamcorper nulla sagittis.
+                    p Interested in being on our podcast? Have a great idea? Or maybe you just want to chat? Drop us a message in the form below and we will be in touch.
 
             section.py-5
                 h2.mb-5.text-center Contact the Girl vs Bull Team
@@ -53,7 +53,7 @@ html(lang="en")
                                 button.btn.btn-primary.px-5.d-block.mx-auto(type="submit") Submit
                         .col-12.text-center.mt-4
                             p Or just email us at
-                            a(href="#") weneedanemail@email.com
+                            a(href="mailto:girlvsbull@protonmail.com") girlvsbull@protonmail.com
 
             footer.py-3
                 .container
@@ -75,12 +75,12 @@ html(lang="en")
                                 img.mr-2(src="placeholder/icons/apple.svg", alt="")
                                 .d-flex.flex-column.text-white
                                     small.m-0 Download on the
-                                    span.m-0.font-weight-bold Apple Store
+                                    span.m-0.font-weight-bold Apple Podcasts
                             a(href="#").btn.btn-primary.d-flex.m-2.m-sm-0
                                 img.mr-2(src="placeholder/icons/google.svg", alt="")
                                 .d-flex.flex-column.text-white
                                     small.m-0 Get it on
-                                    span.m-0.font-weight-bold Google Play
+                                    span.m-0.font-weight-bold Google Podcasts
 
                         .w-100.border-top.my-3
 
