--- a/src/episode-list.pug
+++ b/src/episode-list.pug
@@ -93,12 +93,12 @@ html(lang="en")
                                 img.mr-2(src="placeholder/icons/apple.svg", alt="")
                                 .d-flex.flex-column.text-white
                                     small.m-0 Download on the
-                                    span.m-0.font-weight-bold Apple Store
+                                    span.m-0.font-weight-bold Apple Podcasts
                             a(href="#").btn.btn-primary.d-flex.m-2.m-sm-0
                                 img.mr-2(src="placeholder/icons/google.svg", alt="")
                                 .d-flex.flex-column.text-white
                                     small.m-0 Get it on
-                                    span.m-0.font-weight-bold Google Play
+                                    span.m-0.font-weight-bold Google Podcasts
 
                         .w-100.border-top.my-3
 
