--- a/src/index.pug
+++ b/src/index.pug
@@ -78,27 +78,27 @@ html(lang="en")
                     .row.d-flex.justify-content-between.flex-column.flex-lg-row.align-items-center
                         ul.nav.justify-content-center.my-3.my-lg-0
                             li.nav-item
-                                a.nav-link(href="#") Home
+                                a.nav-link(href="index.html") Home
                             li.nav-item
-                                a.nav-link(href="#") Episodes
+                                a.nav-link(href="episodes.html") Episodes
                             li.nav-item
-                                a.nav-link(href="#") About
+                                a.nav-link(href="about.html") About
                             li.nav-item
-                                a.nav-link(href="#") Exclusives
+                                a.nav-link(href="exclusives.html") Exclusives
                             li.nav-item
-                                a.nav-link(href="#") Collaborate
+                                a.nav-link(href="contact.html") Collaborate
 
                         .d-flex.flex-wrap.align-items-center.justify-content-center.justify-content-lg-start
                             a(href="#").btn.btn-primary.d-flex.m-2.m-sm-0.mr-sm-3
                                 img.mr-2(src="placeholder/icons/apple.svg", alt="")
                                 .d-flex.flex-column.text-white
                                     small.m-0 Download on the
-                                    span.m-0.font-weight-bold Apple Store
+                                    span.m-0.font-weight-bold Apple Podcasts
                             a(href="#").btn.btn-primary.d-flex.m-2.m-sm-0
                                 img.mr-2(src="placeholder/icons/google.svg", alt="")
                                 .d-flex.flex-column.text-white
                                     small.m-0 Get it on
-                                    span.m-0.font-weight-bold Google Play
+                                    span.m-0.font-weight-bold Google Podcasts
 
                         .w-100.border-top.my-3
 
