fixed some spelling errors that were breaking links & wording on apple podcast CTA

--- a/src/episodes.pug
+++ b/src/episodes.pug
@@ -25,7 +25,7 @@ html(lang="en")
                             a.nav-link.active(href="episodes.html") Episodes
                                 span.sr-only (current)
                         li.nav-item
-                            a.nav-link(href="exclsives.html") Exclusives
+                            a.nav-link(href="exclusives.html") Exclusives
                         li.nav-item
                             a.nav-link(href="contact.html") Collaborate
                     a.btn.btn-outline-primary.mt-2.mt-md-0.ml-lg-3(href="#") Listen Now
@@ -149,7 +149,7 @@ html(lang="en")
                             a(href="#").btn.btn-primary.d-flex.m-2.m-sm-0.mr-sm-3
                                 img.mr-2(src="placeholder/icons/apple.svg", alt="")
                                 .d-flex.flex-column.text-white
-                                    small.m-0 Download on the
+                                    small.m-0 Listen on
                                     span.m-0.font-weight-bold Apple Podcasts
                             a(href="#").btn.btn-primary.d-flex.m-2.m-sm-0
                                 img.mr-2(src="placeholder/icons/google.svg", alt="")
