--- a/src/exclusives.pug
+++ b/src/exclusives.pug
@@ -101,7 +101,7 @@ html(lang="en")
                             a(href="#").btn.btn-primary.d-flex.m-2.m-sm-0.mr-sm-3
                                 img.mr-2(src="placeholder/icons/apple.svg", alt="")
                                 .d-flex.flex-column.text-white
-                                    small.m-0 Download on the
+                                    small.m-0 Listen on
                                     span.m-0.font-weight-bold Apple Podcasts
                             a(href="#").btn.btn-primary.d-flex.m-2.m-sm-0
                                 img.mr-2(src="placeholder/icons/google.svg", alt="")
