--- a/src/episodes.pug
+++ b/src/episodes.pug
@@ -42,9 +42,9 @@ html(lang="en")
                                             a(href="#")
                                                 img.img-fluid(src="https://bootstrapshuffle.com/placeholder/pictures/bg_4-3.svg?primary=e83e8c", alt="")
                                         .col-md-7
-                                            a.badge.badge-primary.px-2(href="#") Relationships
+                                            a.badge.badge-primary.px-2(href="#") Life
                                             h5.card-title.my-2
-                                                a(href="#") Doing the Right Thing
+                                                a(href="episode-1-look-at-her-now.html") Episode 1: Look at her Now
                                             p.small.text-muted Lorem ipsum dolor sit amet, consectetur adipiscing elit. gravida augue, a eleifend dolor. Sed sagittis ut odio vitae porta. Mauris et sapien lacinia, ornare nulla sit amet, tincidunt turpis. Integer fringilla sem a odio condimentum, vel ullamcorper nulla sagittis.
                                             a(href="#") Listen Now
                             .card.mb-4
@@ -56,7 +56,43 @@ html(lang="en")
                                         .col-md-7
                                             a.badge.badge-primary.px-2(href="#") Workplace
                                             h5.card-title.my-2
-                                                a(href="#") How to Spot a Toxic Work Culture
+                                                a(href="episode-2-new-beginnings.html") Episode 2: New Beginnings
+                                            p.small.text-muted Lorem ipsum dolor sit amet, consectetur adipiscing elit. gravida augue, a eleifend dolor. Sed sagittis ut odio vitae porta. Mauris et sapien lacinia, ornare nulla sit amet, tincidunt turpis. Integer fringilla sem a odio condimentum, vel ullamcorper nulla sagittis.
+                                            a(href="#") Read more
+                        .col-lg-5
+                            .card
+                                a(href="#")
+                                    img.card-img-top(src="https://bootstrapshuffle.com/placeholder/pictures/bg_16-9.svg?primary=e83e8c", alt="")
+                                .card-body
+                                    a.badge.badge-primary.px-2(href="#") Culture
+                                    h5.card-title.my-2
+                                        a(href="episode-3-i-want-more.html") Episode 3: I Want More.
+                                    p.small.text-muted Lorem ipsum dolor sit amet, consectetur adipiscing elit. gravida augue, a eleifend dolor. Sed sagittis ut odio vitae porta. Mauris et sapien lacinia, ornare nulla sit amet, tincidunt turpis. Integer fringilla sem a odio condimentum, vel ullamcorper nulla sagittis.
+                                    a(href="#") Read more
+
+                        .col-lg-7
+                            .card.mb-4
+                                .card-body
+                                    .row
+                                        .col-md-5.mb-4.mb-md-0
+                                            a(href="#")
+                                                img.img-fluid(src="https://bootstrapshuffle.com/placeholder/pictures/bg_4-3.svg?primary=e83e8c", alt="")
+                                        .col-md-7
+                                            a.badge.badge-primary.px-2(href="#") Relationships
+                                            h5.card-title.my-2
+                                                a(href="episode-4-managing-men.html") Episode 4: Managing Men
+                                            p.small.text-muted Lorem ipsum dolor sit amet, consectetur adipiscing elit. gravida augue, a eleifend dolor. Sed sagittis ut odio vitae porta. Mauris et sapien lacinia, ornare nulla sit amet, tincidunt turpis. Integer fringilla sem a odio condimentum, vel ullamcorper nulla sagittis.
+                                            a(href="#") Listen Now
+                            .card.mb-4
+                                .card-body
+                                    .row
+                                        .col-md-5.mb-4.mb-md-0
+                                            a(href="#")
+                                                img.img-fluid(src="https://bootstrapshuffle.com/placeholder/pictures/bg_4-3.svg?primary=e83e8c", alt="")
+                                        .col-md-7
+                                            a.badge.badge-primary.px-2(href="#") Workplace
+                                            h5.card-title.my-2
+                                                a(href="episode-5-slack(er)-culture.html") Episode 5: Slack(er) Culture
                                             p.small.text-muted Lorem ipsum dolor sit amet, consectetur adipiscing elit. gravida augue, a eleifend dolor. Sed sagittis ut odio vitae porta. Mauris et sapien lacinia, ornare nulla sit amet, tincidunt turpis. Integer fringilla sem a odio condimentum, vel ullamcorper nulla sagittis.
                                             a(href="#") Read more
                         .col-lg-5
@@ -66,68 +102,11 @@ html(lang="en")
                                 .card-body
                                     a.badge.badge-primary.px-2(href="#") Workplace
                                     h5.card-title.my-2
-                                        a(href="#") Learning from Failures
+                                        a(href="episode-6-those-who-cant-say-they-did.html") Episode 6: Those Who Can't Say They Did
                                     p.small.text-muted Lorem ipsum dolor sit amet, consectetur adipiscing elit. gravida augue, a eleifend dolor. Sed sagittis ut odio vitae porta. Mauris et sapien lacinia, ornare nulla sit amet, tincidunt turpis. Integer fringilla sem a odio condimentum, vel ullamcorper nulla sagittis.
                                     a(href="#") Read more
 
 
-
-            section.py-5
-                .container
-                    .row.mb-4.text-center.text-lg-left
-                        .col-lg-6
-                            h2 Episodes by Category
-                        .col-lg-6
-                            p.lead Lorem ipsum dolor sit amet, consectetur adipiscing elit. gravida augue, a eleifend dolor. Sed sagittis ut odio vitae porta. Mauris et sapien lacinia, ornare nulla sit amet, tincidunt turpis. Integer fringilla sem a odio condimentum, vel ullamcorper nulla sagittis.
-                    .card-deck
-                        .card.border-0.mb-4
-                            .py-3.d-flex.justify-content-between
-                                h5.mb-0 Workplace
-                                a.mb-0(href="#") See all
-                            a(href="#")
-                                img.card-img-top(src="https://bootstrapshuffle.com/placeholder/pictures/bg_4-3.svg?primary=e83e8c", alt="")
-                            .card-body.text-muted.small
-                                a.d-flex.px-1.py-3.justify-content-between.border-bottom(href="#")
-                                    span How to spot a toxic culture
-                                    span &rsaquo;
-                                a.d-flex.px-1.py-3.justify-content-between.border-bottom(href="#")
-                                    span Nailing your first interview
-                                    span &rsaquo;
-                                a.d-flex.px-1.py-3.justify-content-between.border-bottom(href="#")
-                                    span Why women are integral to success
-                                    span &rsaquo;
-                        .card.border-0.mb-4
-                            .py-3.d-flex.justify-content-between
-                                h5.mb-0 Relationships
-                                a.mb-0(href="#") See all
-                            a(href="#")
-                                img.card-img-top(src="https://bootstrapshuffle.com/placeholder/pictures/bg_4-3.svg?primary=e83e8c", alt="")
-                            .card-body.text-muted.small
-                                a.d-flex.px-1.py-3.justify-content-between.border-bottom(href="#")
-                                    span No means no
-                                    span &rsaquo;
-                                a.d-flex.px-1.py-3.justify-content-between.border-bottom(href="#")
-                                    span Worst first dates
-                                    span &rsaquo;
-                                a.d-flex.px-1.py-3.justify-content-between.border-bottom(href="#")
-                                    span How dating is different in 2020
-                                    span &rsaquo;
-                        .card.border-0.mb-4
-                            .py-3.d-flex.justify-content-between
-                                h5.mb-0 Current Events
-                                a.mb-0(href="#") See all
-                            a(href="#")
-                                img.card-img-top(src="https://bootstrapshuffle.com/placeholder/pictures/bg_4-3.svg?primary=e83e8c", alt="")
-                            .card-body.text-muted.small
-                                a.d-flex.px-1.py-3.justify-content-between.border-bottom(href="#")
-                                    span Pandemic hysteria
-                                    span &rsaquo;
-                                a.d-flex.px-1.py-3.justify-content-between.border-bottom(href="#")
-                                    span Tech trends - April 2020
-                                    span &rsaquo;
-                                a.d-flex.px-1.py-3.justify-content-between.border-bottom(href="#")
-                                    span Being fiscally responsible as a millennial
-                                    span &rsaquo;
 
 
             footer.py-3
