changed read more to listen now links on episodes.html, edited titles and removed authors on individual episode pages

--- a/src/episode-1-look-at-her-now.pug
+++ b/src/episode-1-look-at-her-now.pug
@@ -32,9 +32,8 @@ html(lang="en")
 
             section.py-5
                 .container.text-center
-                    h2 Why Strong Tea Isn't Good For CEOs
-                    p November 14, by 
-                        a(href="#") Dinesh Chugtai
+                    h2 Episode 1: Look at her Now
+                    p November 14
                     img.img-fluid.my-5(src="https://bootstrapshuffle.com/placeholder/pictures/bg_16-9.svg?primary=e83e8c", alt="")
                     .row.text-left
                         .col-lg-8.mx-auto
