--- a/src/index.pug
+++ b/src/index.pug
@@ -1,7 +1,7 @@
 doctype html
 html(lang="en")
     head
-        title Page title
+        title Girl vs Bull
         meta(charset="utf-8")
         meta(name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no")
         meta(name="description" content="Girl vs Bull: A podcast experience like no other")
