nothing to see here

--- a/src/index.pug
+++ b/src/index.pug
@@ -34,7 +34,7 @@ html(lang="en")
                     .row
                         .col-md-6.my-auto
                             h1.display-4 A podcast experience like no other.
-                            p.lead.text-muted.mb-4 We're here to rock your world. Are you ready for some cold, hard truth?
+                            p.lead.text-muted.mb-4 Speaking loudly and publicly about the fight for inequality, respect and the challenges of the modern successful female in the digital era. 
                             a.btn.btn-primary(href="#") Start Listening
                             a.btn.btn-link(href="#") Learn more
                         .col-md-6
@@ -50,21 +50,21 @@ html(lang="en")
                             .card
                                 img.card-img-top(src="https://bootstrapshuffle.com/placeholder/pictures/bg_4-3.svg?primary=e83e8c", alt="")
                                 .card-body
-                                    h5.card-title Episode One: Title Goes Here
+                                    h5.card-title Episode 1: Look at her Now
                                     p Lorem ipsum dolor sit amet, consectetur adipiscing elit. gravida augue,a eleifend dolor. Sed sagittis ut odio vitae porta. Mauris                 et sapien lacinia, ornare nulla sit amet, tincidunt turpis. Integer fringilla sem a odio condimentum, vel ullamcorper nulla sagittis.
                                     a(href="#", role="button") Listen now
                         .col-md-4.mb-4
                             .card
                                 img.card-img-top(src="https://bootstrapshuffle.com/placeholder/pictures/bg_4-3.svg?primary=e83e8c", alt="")
                                 .card-body
-                                    h5.card-title Episode Two: Title Goes Here
+                                    h5.card-title Episode 2: New Beginnings
                                     p Lorem ipsum dolor sit amet, consectetur adipiscing elit. gravida augue,a eleifend dolor. Sed sagittis ut odio vitae porta. Mauris et sapien lacinia, ornare nulla sit amet, tincidunt turpis. Integer fringilla sem a odio condimentum, vel ullamcorper nulla sagittis.
                                     a(href="#", role="button") Listen now
                         .col-md-4.mb-4
                             .card
                                 img.card-img-top(src="https://bootstrapshuffle.com/placeholder/pictures/bg_4-3.svg?primary=e83e8c", alt="")
                                 .card-body
-                                    h5.card-title Episode Three: Title Goes Here
+                                    h5.card-title Episode 3: I Want More
                                     p Lorem ipsum dolor sit amet, consectetur adipiscing elit. gravida augue,a eleifend dolor. Sed sagittis ut odio vitae porta. Mauris et sapien lacinia, ornare nulla sit amet, tincidunt turpis. Integer fringilla sem a odio condimentum, vel ullamcorper nulla sagittis.
                                     a(href="#", role="button") Listen now
 
