Get the text typing again on the homepage
Changes were mostly copied from the original commit that added the
feature:
https://github.com/simplycat/girlvsbull/commit/dce5f5079590fb9ea58b4e0790702f63e04649b3

--- a/src/index.pug
+++ b/src/index.pug
@@ -34,13 +34,9 @@ html(lang="en")
                 .container
                     .row
                         .col-md-6.my-auto
-                            h1.display-4 Girl vs 
-                                .script 
-                                    TxtRotate(
-                                    txt-rotate = [' Culture.', ' Workplace.', ' Relationship.', ' Bull.']
-                                    data-period = 2000
-                                    )
-                            p.lead.text-muted.mb-4 This is where we should put our profound intro sentence. 
+                            h1.display-4 Girl vs
+                                span.txt-rotate(data-period = 2000, data-rotate=[' Culture.', ' Workplace.', ' Relationship.', ' Bull.']) Bull.
+                            p.lead.text-muted.mb-4 This is where we should put our profound intro sentence.
                             a.btn.btn-primary(href="#") Start Listening
                             a.btn.btn-link(href="#") Learn more
                         .col-md-6
